fix navbar z-index

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -16,7 +16,7 @@
 
 .page-hd{
     position: fixed;
-    z-index: 9999 !important;
+    z-index: 4999 !important;
     top: 0;
     left: 0;
     right: 0;
